--- a/frontend/src/components/modal/Modal.scss
+++ b/frontend/src/components/modal/Modal.scss
@@ -1,5 +1,5 @@
 .modal-area {
-	background-color: #b21e1e;
+	background-color: yellow;
 	box-shadow: 0 0 10px 3px rgba(0, 0, 0, 0.1);
 	z-index: 11;
 	overflow-y: auto;
