--- a/frontend/src/components/Auth/ModalForm.scss
+++ b/frontend/src/components/Auth/ModalForm.scss
@@ -4,6 +4,7 @@
     align-content: center;
     flex-direction: column;
     gap: 10px;
+    margin-top: 25px;
 
     .modalName {
         font-size: 22px;
