--- a/frontend/src/components/SplashPage/SplashPage.css
+++ b/frontend/src/components/SplashPage/SplashPage.css
@@ -11,12 +11,16 @@
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-image: url(image.png);
-	background-size: cover;
+	/* background-image: url(image.png);
+	background-size: cover; */
 	filter: blur(1px);
 	z-index: -1;
 }
 
+#root {
+	background-image: url(image.png);
+	background-size: cover;	
+}
 
 
 .map-message-wrapper {
