--- a/frontend/src/components/SplashPage/SplashPage.css
+++ b/frontend/src/components/SplashPage/SplashPage.css
@@ -1,27 +1,15 @@
-.splash-page-bg {
-	position: relative;
-	width: 100vw;
-	height: 100vh;
-}
-
-.splash-page-bg::before {
+.splash-page::before {
 	content: "";
 	position: absolute;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
-	/* background-image: url(image.png);
-	background-size: cover; */
+	background-image: url(image.png);
+	background-size: cover;
 	filter: blur(1px);
 	z-index: -1;
 }
-
-#root {
-	background-image: url(image.png);
-	background-size: cover;	
-}
-
 
 .map-message-wrapper {
     display: flex;
