--- a/frontend/src/components/Spot/CreateSpotForm.scss
+++ b/frontend/src/components/Spot/CreateSpotForm.scss
@@ -1,15 +1,20 @@
 form {
     // TODO: Delete background-color once merged. 
     // Should start with white/blank background
-    background-color: white;
+    background-color: #e0f2c4;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    height: 100vh;
     gap: 15px;
+    // padding-bottom: 50px;
 
     
     .createSpotTitle {
         display: flex;
         justify-content: center;
+        margin-top: 20px;
+        margin-bottom: 30px;
     }
 
     label {
@@ -20,13 +25,31 @@ form {
 
         select {
             height: 30px;
-            width: 75px;
+            width: 50px;
         }
 
         input {
             height: 30px;
-            width: 600px;
+            width: 500px;
         }
+    }
+
+    .statesList {
+        // display: flex;
+
+        // position: absolute;
+        select {
+            
+            background-color: red;
+            overflow: auto;
+            max-height: 500px;
+
+        }
+    }
+
+    .dropdownList {
+        // position: relative;
+        // height: 100px;
     }
 
     button {
