--- a/frontend/src/components/SplashPage/SplashPage.css
+++ b/frontend/src/components/SplashPage/SplashPage.css
@@ -13,7 +13,8 @@
 
 .map-message-wrapper {
     display: flex;
-    padding: 100px;
+    padding: 50px 100px 0px 100px;
+
     gap: 200px;
     width: 100vw;
 }
