--- a/frontend/src/components/Spot/CreateSpotForm.scss
+++ b/frontend/src/components/Spot/CreateSpotForm.scss
@@ -43,10 +43,15 @@ form {
         // position: absolute;
         // font-size: 16px;
 
+
         select {    
             background-color: red;
             overflow: auto;
             max-height: 500px;
+            // .dropdown-menu {
+            //     max-height: 100px;
+            //     overflow-y: auto;
+            // }
         }
     }
 
