Fixed Auth Sign up button

--- a/frontend/src/components/Spot/CreateSpotForm.scss
+++ b/frontend/src/components/Spot/CreateSpotForm.scss
@@ -47,7 +47,8 @@ form {
         select {    
             background-color: red;
             overflow: auto;
-            max-height: 500px;
+            // max-height: 500px;
+
             // .dropdown-menu {
             //     max-height: 100px;
             //     overflow-y: auto;
