--- a/frontend/src/components/Reservation/DateBoxItem.scss
+++ b/frontend/src/components/Reservation/DateBoxItem.scss
@@ -7,11 +7,11 @@
     justify-content: center;
     align-items: center;
     border-radius: 4px;
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
 
     &:hover {
         background-color: #A9BF99;
-        box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+        box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
     }
     p {
         font-family: Roboto;
