change button of index card

--- a/frontend/src/components/SpotsIndex/SpotsIndex.css
+++ b/frontend/src/components/SpotsIndex/SpotsIndex.css
@@ -47,6 +47,8 @@
 }
 
 .btn-container {
-    margin-left: 550px;
+    /* margin-left: 550px; */
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
 }
-
