--- a/frontend/src/components/Auth/ModalForm.scss
+++ b/frontend/src/components/Auth/ModalForm.scss
@@ -4,7 +4,7 @@
     align-content: center;
     flex-direction: column;
     gap: 10px;
-    margin-top: 5px;
+    margin-top: 25px;
     padding: 0px 10px 0px 10px;
 
     .errors {
@@ -41,6 +41,7 @@
             opacity: 1;
           }
         }
+
     }
 
     .modalButton {
@@ -56,7 +57,8 @@
             border-radius: 5px;
             background-color: #e0f2c4;
             font-weight: 700;
-            box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 9px;        }
+            box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 9px;
+        }
 
         .modalButton_btn:hover {
             background-color: #a9bf99;
