--- a/frontend/src/components/Spot/CreateSpotForm.scss
+++ b/frontend/src/components/Spot/CreateSpotForm.scss
@@ -127,6 +127,7 @@
         padding-top: 6px;
         background-color: #f8941983;
         box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 9px;
+        font-weight: 600;
     }
 
     .createButton:hover {
