--- a/frontend/src/components/Reservation/CarouselButton.scss
+++ b/frontend/src/components/Reservation/CarouselButton.scss
@@ -3,9 +3,8 @@
     z-index: 1;
     display: flex;
     justify-content: space-between;
-    margin-left: 20px;
-    margin-right: 20px;
     width: 490px;
+    box-sizing: none !important;
 }
 
 .btnn {
@@ -13,8 +12,8 @@
     border: 1px solid rgb(167 166 171);
     color: rgb(42 42 50);
     border-radius: 24%;
-    width: 44px;
-    height: 44px;
+    width: 24px;
+    height: 24px;
 
     .btn__icon {
         font-size: 25px;
