--- a/frontend/src/components/Reservation/DateBoxItem.scss
+++ b/frontend/src/components/Reservation/DateBoxItem.scss
@@ -4,6 +4,7 @@
     background-color: #E0F2C4;
     border: 1px solid #A9BF99;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     border-radius: 4px;
