Fix issue Modal #26

--- a/frontend/src/components/SplashPage/SplashPage.css
+++ b/frontend/src/components/SplashPage/SplashPage.css
@@ -14,9 +14,9 @@
 .map-message-wrapper {
     display: flex;
     padding: 50px 100px 0px 100px;
-
     gap: 200px;
     width: 100vw;
+	height: 100vh;
 }
 .left-side {
     width: 680px;
