Final commit for splash page styling

--- a/frontend/src/components/SplashPage/SplashPage.css
+++ b/frontend/src/components/SplashPage/SplashPage.css
@@ -23,24 +23,36 @@
     height: 600px;
 	border-radius: 20px !important;
 	overflow: hidden;
-}
+	box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;}
 
 .right-side {
     width: 50%;
-	margin: auto;
+    width: 680px;
+    height: 600px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
-
 h2 {
 	font-weight: 700px;
 	color: #e0f2c4;
+	font-size: 30px !important;
 	/* letter-spacing: 2px; */
 }
 
 .start-btn {
     background-color: #e0f2c4 !important;
-    color: #0c1059;
+    color: #0c1059 !important;
 	width: 200px;
-	font-size: 30px !important; 
+	font-size: 25px !important; 
 	margin-top: 30px;
+	box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
 
+}
+
+.park-with-us{
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	align-items: center;
 }
