Fix sizing and navbar logo for index page

--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -32,6 +32,10 @@
     color: #0c1059 !important;
 }
 
+.navbar-brand > img {
+    height: 40px;
+}
+
 .logout-btn {
     background-color: #e0f2c4 !important;
     font-weight: 500 !important;
