--- a/frontend/src/components/ShowPage/ShowPage.css
+++ b/frontend/src/components/ShowPage/ShowPage.css
@@ -2,8 +2,17 @@
     background-color: #efe9e1;
     /* height: 100vh; */
     padding: 50px 10px;
-
     /* height: 100% !important; */
+
+
+    /* background-color: #efe9e1;
+    content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: -1; */
 }
 
 .show-wrapper {
@@ -17,10 +26,12 @@
     display: grid;   
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
-    gap: 15px;
+    gap: 10px;
 }
+
 .show-images img{
- width: 100%;
+ width: 90%;
+ height: 90%;
 }
 .map-container{
     height: 100%;
