--- a/frontend/src/components/UserProfile/UserProfile.scss
+++ b/frontend/src/components/UserProfile/UserProfile.scss
@@ -2,4 +2,20 @@
     background-color: beige;
     display: flex;
     justify-content: center;
+    flex-direction: column;
+}
+
+.profile-image {
+    width: 300px;
+    height: 300px;
+    border-radius: 50px;
+    margin: 0 auto;
+}
+
+.profile-header {
+
+    h1 {
+        font-size: 40px;
+        text-align: center;
+    }
 }
