Edit profile image css

--- a/frontend/src/components/UserProfile/UserProfile.scss
+++ b/frontend/src/components/UserProfile/UserProfile.scss
@@ -7,9 +7,10 @@
 
 .profile-image {
     width: 300px;
-    height: 300px;
+    height: 275px;
     border-radius: 50px;
     margin: 0 auto;
+    margin-top: 20px;
 }
 
 .profile-header {
