--- a/frontend/src/components/SplashPage/SplashPage.css
+++ b/frontend/src/components/SplashPage/SplashPage.css
@@ -47,7 +47,7 @@ h2 {
 	font-size: 25px !important; 
 	margin-top: 30px;
 	box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
-
+	text-decoration: none !important;
 }
 
 .park-with-us{
@@ -55,4 +55,9 @@ h2 {
 	justify-content: center;
 	flex-direction: column;
 	align-items: center;
+}
+
+a {
+	text-decoration: none !important;
+	color: #0c1059 !important;
 }
