--- a/frontend/src/components/Spot/CreateSpotForm.scss
+++ b/frontend/src/components/Spot/CreateSpotForm.scss
@@ -22,9 +22,7 @@
         }
         
         .createPageLabel {
-            padding-left: 10px;
             font-size: 16px;
-            // padding-right: 38px;
             
     
             .inputTitle {
@@ -112,6 +110,9 @@
         }
         
         .calendar {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
             width: 500px;
             margin-top: 35px;
 
@@ -195,13 +196,14 @@
     .cityState {
         display: flex;
         flex-direction: row;
-        gap: 38px;
+        gap: 47px;
     }
 
     .rateType {
         display: flex;
         flex-direction: row;
         margin-top: 30px;
+        gap: 40px
     }
 
     input {
