--- a/frontend/src/components/Spot/CreateSpotForm.scss
+++ b/frontend/src/components/Spot/CreateSpotForm.scss
@@ -121,6 +121,20 @@
                 font-weight: 600;
             }
 
+            .startTime {
+                display: flex;
+                flex-direction: row;
+                gap: 20px;
+                margin-top: 10px;
+            }
+
+            .endTime {
+                display: flex;
+                flex-direction: row;
+                gap: 20px;
+                margin-top: 10px;
+            }
+
         }
         
         .inputDesc {
