Corrected date display

--- a/frontend/src/components/Spot/CreateSpotForm.scss
+++ b/frontend/src/components/Spot/CreateSpotForm.scss
@@ -126,13 +126,7 @@
                 flex-direction: row;
                 gap: 20px;
                 margin-top: 10px;
-            }
-
-            .endTime {
-                display: flex;
-                flex-direction: row;
-                gap: 20px;
-                margin-top: 10px;
+                font-weight: 500;
             }
 
         }
