search bar css done

--- a/frontend/src/components/SpotsIndex/SpotsIndex.scss
+++ b/frontend/src/components/SpotsIndex/SpotsIndex.scss
@@ -34,6 +34,18 @@
     .input-group {
         height: 50px;
     }
+
+    .car-type-pricing {
+        background-color: #a9bf99;
+        color: #0c1059;
+        border: none;
+        font-weight: 600;
+    }
+
+    .car-type-pricing:hover {
+        background-color: #0c1059;
+        color: #e0f2c4;
+    }
 }
 
 
