search bar check box done

--- a/frontend/src/components/SpotsIndex/SpotsIndex.scss
+++ b/frontend/src/components/SpotsIndex/SpotsIndex.scss
@@ -46,6 +46,10 @@
         background-color: #0c1059;
         color: #e0f2c4;
     }
+
+    .dropdown-menu {
+        padding-left: 10px;
+    }
 }
 
 
