--- a/frontend/src/components/Spot/CreateSpotForm.scss
+++ b/frontend/src/components/Spot/CreateSpotForm.scss
@@ -129,6 +129,13 @@
                 font-weight: 500;
             }
 
+            .displayDate {
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                gap: 10px;
+            }
+
         }
         
         .inputDesc {
